--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^17.3.12",
     "bootstrap": "^5.3.6",
     "chart.js": "^4.5.0",
+    "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "ng2-charts": "^4.1.1",
     "rxjs": "~7.8.1",
