--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chart.js": "^4.5.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "ng2-charts": "^4.1.1",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.2",
