--- a/angular.json
+++ b/angular.json
@@ -1,9 +1,9 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
-  "defaultProject": "hedge-dashboard",
+  "defaultProject": "balancer",
   "projects": {
-    "hedge-dashboard": {
+    "balancer": {
       "projectType": "application",
       "root": "",
       "sourceRoot": "src",
@@ -12,7 +12,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/hedge-dashboard",
+            "outputPath": "dist/balancer",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": ["zone.js"],
@@ -48,11 +48,11 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "hedge-dashboard:build"
+            "browserTarget": "balancer:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "hedge-dashboard:build:production"
+              "browserTarget": "balancer:build:production"
             }
           }
         }
